<resources>
    <string name="app_name">College Sync</string>
    <string name="client_id">600569694485-fceci91psjabas02pekc9bdm54344tbf.apps.googleusercontent.com</string>
    <string name="google_sign_in_failed">Google sign-in failed</string>
    <string name="firebase_auth_failed">Firebase Authentication failed</string>
    <string name="no_pdf_file_selected_yet">No PDF File Selected yet !</string>

    <string name="search_hint">Search for an event...</string>
    <string name="location"></string>
    <string name="heads"><u>Heads</u></string>
    <string name="student_guide"><u>Student Guide</u></string>
    <string name="assistant_heads"><u>Assistant Heads</u></string>
    <string name="about_us">About Us</string>
    <string name="welcome_message">

Welcome to College Sync! Your one-stop app for college academics, events, and student body. Stay informed and connected!</string>
    <string name="meet_the_team">Meet the Team:</string>
    <string name="vishwendra">Vishwendra (B. Tech. Chemical)</string>
    <string name="dikshant">Dikshant Jha (BS Physics)</string>
    <string name="tashir">Tashir Ahmad(B. Tech. Mechanical)</string>
    <string name="addressing_need">Need:</string>
    <string name="need_description"><![CDATA[College students face several challenges:<br/><br/>

        &#8226; <b>Scattered Information: </b>Academic updates and event details are spread across multiple platforms.<br/><br/>
        &#8226; <b>Poor Communication:</b> Ineffective communication leads to missed opportunities and misunderstandings. <br/><br/>
        &#8226; <b>Low Engagement:</b> Students often miss out on events due to lack of timely information.<br/><br/>
        &#8226; <b>Disconnected Community: </b> Without a unified platform, it’s difficult to foster a sense of community and support among students.<br/><br/>
        These issues highlight the need for a comprehensive app to streamline and enhance the college experience.
        ]]>
    </string>
    <string name="our_initiative">Our Initiative:</string>
    <string name="initiative_description"><![CDATA[College Sync addresses this by providing:<br/><br/>

        &#8226; <b>Centralized Information:</b> Access all academic updates, event details, and Student Body info in one place.<br/><br/>
        &#8226; <b>Seamless Communication:</b> Stay connected with your peers and student leaders effortlessly.<br/><br/>
        &#8226; <b>Enhanced Engagement:</b> Easily discover and participate in events and activities around campus.<br/><br/>
        &#8226; <b>Simplified Experience:</b> Streamline your college experience with a user-friendly and comprehensive app.<br/><br/>
        College Sync ensures you stay informed, connected, and engaged, making your college journey smoother and more enjoyable.
        ]]></string>
    <string name="secretary"><u>Secretary</u></string>
    <string name="joint_secretary"><u>Joint-Secretary</u></string>
    <string name="overall_coordinators"><u>Overall-Coordinators</u></string>
    <string name="men_s_captian"><u>Men\'s Captian</u></string>
    <string name="men"><u>Men</u></string>
    <string name="men_s_vice_captian"><u>Men\'s Vice Captian</u></string>
    <string name="women"><u>Women</u></string>
    <string name="women_s_captian"><u>Women\'s Captian</u></string>
    <string name="women_s_vice_captian"><u>Women\'s Vice Captian</u></string>
    <string name="word_games_club_head">Word Games Club Head</string>
    <string name="oratory_club_head">Oratory Club Head</string>
    <string name="book_club_head">Book Club Head</string>
    <string name="creative_writing_and_poetry_club_head">Creative Writing and Poetry Club Head</string>
    <string name="goonj_head">Goonj Head</string>
</resources>