<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:padding="16dp"
        android:background="@drawable/background_rounded_corners">

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:background="@drawable/roundcorner"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/about_us"

            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meet_the_team"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingBottom="8dp" />

        <!-- Team Member Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Tashir -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tashir"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                    <ImageView
                        android:id="@+id/instagram_tashir"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_instagram"
                        android:contentDescription="@string/tashir" />


                    <ImageView
                        android:id="@+id/linkedin_tashir"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_linkedin"
                        android:contentDescription="@string/tashir" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Dikshant -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dikshant"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/instagram_dikshant"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_instagram"
                        android:contentDescription="@string/dikshant" />
                    <ImageView
                        android:id="@+id/linkedin_dikshant"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_linkedin"
                        android:contentDescription="@string/dikshant" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Vishwendra-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/vishwendra"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/instagram_vishwendra"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_instagram"
                        android:contentDescription="@string/vishwendra" />

                    <ImageView
                        android:id="@+id/linkedin_vishwendra"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_linkedin"
                        android:contentDescription="@string/vishwendra" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressing_need"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/need_discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need_description"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_initiative"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/initiative_discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initiative_description"
            android:textSize="16sp"
            android:textColor="@color/black" />

    </LinearLayout>

</ScrollView>

