<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"


    >
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:background="@drawable/new_design"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:background="@color/newcolor"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="14dp">
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mainlogo"
                android:layout_width="161dp"
                android:layout_height="161dp"
                android:layout_marginTop="-90dp"
                app:civ_border_color="#FFFFFFFF"
                app:civ_border_width="4dp" />

            <TextView
                android:id="@+id/mainHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp">
            </TextView>

            <TextView
                android:id="@+id/role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:textSize="12sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#686565"
                android:text="@string/secretary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="12sp"
                />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/secyimg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/secyname"
                android:textSize="15sp"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="17sp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#686565"
                android:text="@string/men"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="12sp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#686565"
                android:text="@string/men_s_captian"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="12sp"
                />



            <ImageView
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:id="@+id/mencaptainimg"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:id="@+id/mencaptain"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#686565"
                android:text="@string/men_s_vice_captian"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="12sp"
                />
            <ImageView
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:id="@+id/menvicecaptainimg"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/menvicecaptain"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#686565"
                android:text="@string/women"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="12sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#686565"
                android:text="@string/women_s_captian"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="12sp"
                />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:id="@+id/womencaptainimg"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#686565"
                android:layout_gravity="center_horizontal"
                android:id="@+id/womencaptain"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#686565"
                android:text="@string/women_s_vice_captian"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginBottom="12sp"
                />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:id="@+id/womenvicecaptainimg"


                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#686565"
                android:layout_gravity="center_horizontal"
                android:id="@+id/womenvicecaptai"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"


                />




        </LinearLayout>

    </LinearLayout>
</ScrollView>