<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"

    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bsw">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ExtraText">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:background="@drawable/new_design"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:background="@color/newcolor"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="14dp">
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image1"
                android:layout_width="161dp"
                android:src="@drawable/bsww"
                android:layout_height="161dp"
                android:layout_marginTop="-90dp"
                app:civ_border_color="#FFFFFFFF"
                app:civ_border_width="4dp" />

            <TextView
                android:id="@+id/subheading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Board of Student Welfare"
                android:textSize="18sp">
            </TextView>


            <TextView
                android:id="@+id/body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="The Board of Student Welfare (BSW) at IIT Jodhpur is dedicated to supporting and enhancing the overall well-being of students. The BSW provides a wide range of services, including mental health counseling, academic support, health and wellness programs, and financial aid assistance. It also organizes various cultural, sports, and recreational activities to promote a balanced and enriching student life. The Student Welfare Coordinators (SWC), a team of proactive students within the BSW, work tirelessly to address student concerns and implement initiatives that improve the campus experience. By fostering a supportive environment and addressing the diverse needs of students, the BSW ensures that every student at IIT Jodhpur can thrive both personally and academically"
                android:textSize="12sp">
            </TextView>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/swc"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:background="@drawable/roundcorner"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="Swc Team"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/head"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"

                android:layout_marginTop="20dp"

                android:textSize="20sp"
                android:text="@string/heads"/>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/assistanthead_layout"
            android:gravity="center_horizontal"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/headLists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="0.0">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ahs"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"

                android:layout_marginTop="20sp"

                android:textSize="20sp"
                android:text="@string/assistant_heads"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/sgs_layout"
            android:gravity="center_horizontal"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/assistantheadsLists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="0.0">

            </androidx.recyclerview.widget.RecyclerView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sg"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:layout_marginTop="20sp"

                android:textSize="20sp"
                android:text="@string/student_guide"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/sg_layout"
            android:gravity="center_horizontal"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sgLists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="0.0">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>



    </LinearLayout>

</LinearLayout>

</ScrollView>